test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/internal_linkage_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[47]:
  static
  int
  identifier(x)
  ;
  int
  identifier(read_x)
  (
  void
  )
  {
  return
  identifier(x)
  ;
  }
  int
  identifier(update_x)
  (
  int
  identifier(new_val)
  )
  {
  extern
  int
  identifier(x)
  ;
  identifier(x)
  =
  identifier(new_val)
  ;
  return
  const int(0)
  ;
  }
  extern
  int
  identifier(x)
  ;
  static
  int
  identifier(x)
  =
  const int(5)
  ;
  static
  int
  identifier(x)
  ;
