test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_declarations/extern_follows_static_local_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  int
  identifier(x)
  =
  const int(0)
  ;
  extern
  int
  identifier(x)
  ;
  return
  identifier(x)
  ;
  }
